--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <input type="text" class="username" placeholder="username">
       <p>PASSWORD</p>
       <input type="password" class="password" placeholder="password">
-      <a href="home.html"><button>PROCEED</button>
+      <button>PROCEED</button>
       
     </body>
